# termbook

./: .travis.yml  CHANGELOG.md  Cargo.toml  Makefile  README.md  developers.html  index.html  introduction.html  print.html  searchindex.js  searchindex.json  tags.html
.github/workflows/: release.yml  rust.yml
cli/: build.html  completions.html  installation.html  play.html
doc/: book.toml
doc/src/: SUMMARY.md  developers.md  introduction.md  tags.md
doc/src/cli/: build.md  completions.md  installation.md  play.md
lib/pulldown-cmark-to-cmark/: CONTRIBUTING.md  Cargo.toml  README.md
lib/pulldown-cmark-to-cmark/examples/: eventcat.rs  stupicat.rs
lib/pulldown-cmark-to-cmark/src/: display.rs  fmt.rs  lib.rs
lib/pulldown-cmark-to-cmark/tests/: cat.sh  display.rs  fmt.rs
lib/pulldown-cmark-to-cmark/tests/fixtures/: common-mark.md  ordered.md  table.md  unordered.md
lib/pulldown-cmark-to-cmark/tests/fixtures/snapshots/: stupicat-ordered-output  stupicat-output  stupicat-table-output  stupicat-unordered-output
lib/termbook/: Cargo.toml
lib/termbook/src/: lib.rs  playback.rs  preprocess.rs  render.rs  rewrite.rs
pkg/brew/: termbook.rb  termbook.rb.in
src/: cli.rs  main.rs  parse.rs  types.rs
termbook/: Cargo.toml
termbook-cli/: Cargo.toml
termbook-cli/src/: main.rs  parse.rs  types.rs
termbook/src/: lib.rs  playback.rs  preprocess.rs  rewrite.rs
tests/: all.rs  book-helpers.sh  book.sh
tests/fixtures/books/: exec-blank.md  exec-exit-code-error.md  exec-exit-code-invalid.md  exec-exit-code-mismatch.md  exec-nonexisting-program.md  exec-prepare-named-and-referenced.md  exec-prepare-named-with-use-and-referenced.md  exec-prepare-unnamed.md  hide-on-exec.md  hide-on-prepare.md  hide-with-name.md  include-file-existing-with-code-inside.md  include-file-existing.md  include-file-non-existing.md  include-file-without-newline.md  no-markers.md  use-unknown.md  use-unnamed.md
tests/fixtures/books/multi-chapter-with-exec-and-prepare/: SUMMARY.md  book.toml  index.md
tests/fixtures/books/multi-chapter-with-exec-and-prepare/src/: chapter.md
tests/fixtures/snapshots/: build-filter-match-chapter  build-filter-match-name  build-filter-no-match  build-rewrite-only  exec-exit-code-invalid  exec-exit-code-mismatch  exec-nonexisting-program  exec-prepare-unnamed  hide-on-prepare  hide-with-name  include-file-non-existing  playback-book-no-markers  playback-no-chapter-matches  use-unknown  use-unnamed
tests/fixtures/snapshots/book-exec-blank/: chapter.md  index.md
tests/fixtures/snapshots/book-exec-exit-code-error/: index.md
tests/fixtures/snapshots/book-exec-prepare-named-and-referenced/: index.md
tests/fixtures/snapshots/book-exec-prepare-named-with-use-and-referenced/: index.md
tests/fixtures/snapshots/book-hide-on-exec/: index.md
tests/fixtures/snapshots/book-hide-on-prepare/: index.md
tests/fixtures/snapshots/book-no-markers/: index.md
tests/fixtures/snapshots/build-filter-match-single-chapter-book/: index.md
tests/fixtures/snapshots/include-file-existing/: index.md
tests/fixtures/snapshots/include-file-existing-executable/: index.md
tests/fixtures/snapshots/include-file-existing-executable-no-newline/: index.md
tests/fixtures/snapshots/include-file-no-newline/: index.md
