[package]
name = "termbook-cli"
version = "0.1.0"
authors = ["Sebastian Thiel <sthiel@thoughtworks.com>"]

description = """`termbook` is a command-line tool to build [`mdbook`'s][mdbook] \
              while executing `bash` codeblocks and collecting their output to \
              become part of the `mdbook`
              """
license = "Apache-2.0"
keywords = ["markdown", "terminal", "common-mark"]
repository = "https://github.com/Byron/termbook"
homepage = "https://github.com/Byron/termbook"
documentation = "https://docs.rs/crate/termbook-cli"
readme = "README.md"


[[bin]]
name = "termbook"
path = "src/main.rs"

[lib]
name = "termbook"
path = "src/lib.rs"

[dependencies]
mdbook = "0.1.1"
pulldown-cmark-to-cmark = "1"

[dependencies.termbook]
version = "0.1.0"
path = "lib/termbook"

[workspace]

