[package]
name = "termbook-cli"
version = "1.4.6"
authors = ["Sebastian Thiel <byronimo@gmail.com>"]

description = """`termbook` is a command-line tool to build `mdbook`'s \
              while executing `bash` codeblocks and collecting their output to \
              become part of the `mdbook`.
              """
license = "Apache-2.0"
keywords = ["markdown", "terminal", "common-mark"]
repository = "https://github.com/Byron/termbook"
homepage = "https://github.com/Byron/termbook"
documentation = "https://byron.github.io/termbook"
readme = "README.md"
edition = "2018"
include = ["src/**/*", "LICENSE", "README.md", "CHANGELOG.md"]


[[bin]]
name = "termbook"
path = "src/main.rs"
doc = false
doctest = false

[dependencies]
env_logger = "0.7.1"
pulldown-cmark-to-cmark = "4.0.0"
clap = "2.33.0"
lazy_static = "1.4.0"

[dependencies.termbook]
version = "1.4.2"
path = "termbook"

[workspace]
members = ["termbook"]
