[package]
name = "termbook"
version = "1.4.2"
authors = ["Sebastian Thiel <byronimo@gmail.com>"]

description = "The library behind the `termbook-cli`."
license = "Apache-2.0"
keywords = ["markdown", "terminal", "common-mark"]
repository = "https://github.com/Byron/termbook"
homepage = "https://github.com/Byron/termbook/lib/termbook"
documentation = "https://docs.rs/crate/termbook"

[dependencies]
mdbook = "0.1.2"
pulldown-cmark-to-cmark = "1"
pulldown-cmark = "0.1.0"
mdcat = "0.8.0"
syntect = "2.0.0"
atty = "0.2.6"
globset = "0.3.0"

