[package]
name = "termbook"
version = "1.4.2"
authors = ["Sebastian Thiel <byronimo@gmail.com>"]

description = "The library behind the `termbook-cli`."
license = "Apache-2.0"
keywords = ["markdown", "terminal", "common-mark"]
repository = "https://github.com/Byron/termbook"
homepage = "https://github.com/Byron/termbook/lib/termbook"
documentation = "https://docs.rs/crate/termbook"

[dependencies]
mdbook = "0.3.5"
pulldown-cmark-to-cmark = "2.0.1"
pulldown-cmark = "0.6.1"
mdcat = { version = "0.15.0", default-features = false }
syntect = "3.1.0"
atty = "0.2.14"
globset = "0.4.4"

